--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-body{
-    background-color:#eee;
+body {
+  background-color: #eee;
+}
+.img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.vh-70 {
+  height: 90vh;
 }
